# AutoArch-Engine

./: README.md  SECURITY.md
.github/workflows/: CI_master.yml  build_autoarch.yml
cMake/FreeCAD_Helpers/: CheckInterModuleDependencies.cmake  InitializeFreeCADBuildOptions.cmake  PrintFinalReport.cmake
package/: arxio-ai.desktop
package/arxio-ai-installer/: README.md  install.ps1  install.sh
src/Mod/: CMakeLists.txt
src/Mod/Arxio/: ArxioCommands.py  ArxioExporters.py  ArxioHouseBuilder.py  ArxioTaskPanels.py  ArxioUtils.py  CMakeLists.txt  Init.py  InitGui.py  package.xml
src/Mod/Arxio/tests/: TestArxio.py  __init__.py
src/Mod/ArxioAI/: ArxioAICommands.py  CMakeLists.txt  INSTALL.md  Init.py  InitGui.py  README.md  __init__.py
src/Mod/ArxioAI/ArxioAITools/: __init__.py  ai.py  ai_assistant.py  ai_config.py  ai_generate.py  ai_review.py  estimate.py  openings.py  plan.py  project.py  roof.py  solar.py  walls.py
src/Mod/AutoArch/: AutoArchCommands.py  Init.py  InitGui.py
src/Mod/BIM/bimcommands/: BimClassification.py  BimDiff.py  BimIfcProperties.py  BimSetup.py  BimStairs.py  BimTutorial.py
src/Mod/BIM/importers/: importIFClegacy.py
src/Mod/BIM/nativeifc/: ifc_export.py  ifc_generator.py  ifc_import.py  ifc_objects.py  ifc_psets.py  ifc_status.py  ifc_tools.py  ifc_tree.py
src/Mod/CAM/Path/: Preferences.py
src/Mod/CAM/Path/Main/Gui/: Camotics.py
src/Mod/CAM/Path/Op/: SurfaceSupport.py
src/Mod/CAM/Path/Post/scripts/: opensbp_pre.py
src/Mod/Draft/: DraftGui.py  importSVG.py
src/Mod/Draft/draftgeoutils/: circle_inversion.py  circles.py  circles_apollonius.py
src/Mod/Draft/draftguitools/: gui_annotationstyleeditor.py
src/Mod/Draft/draftobjects/: shape2dview.py
src/Mod/Fem/femguiutils/: vtk_module_handling.py
src/Mod/Fem/feminout/: importVTKResults.py
src/Mod/Fem/femmesh/: femmesh2mesh.py
src/Mod/Fem/femobjects/: constraint_selfweight.py
src/Mod/Fem/femsolver/calculix/: write_constraint_rigidbody_step.py
src/Mod/Fem/femtaskpanels/: task_result_mechanical.py
src/Mod/Help/: Help.py
src/Mod/Import/App/SCL/: Builtin.py
src/Mod/Import/App/SCL_output/: automotive_design.py
src/Mod/Material/: MaterialEditor.py
src/Mod/Tux/: InitGui.py
